include/turbo/turbo.h

/* ---- Handles ----------------------------------------------------------- */

typedef struct turbo_runtime   turbo_runtime;   /* the library, its devices */
/* ---- Small types ------------------------------------------------------- */

/* UTF-8 view. ptr may be NULL only when len is 0. Not NUL-terminated. */
typedef struct turbo_text {
    const char *ptr;
    uint64_t    len;
} turbo_text;
/* Caller-owned. On success code is 0 and message[0] is 0. */
typedef struct turbo_error {
    uint32_t struct_size;
    int32_t  code;
    uint32_t field;     /* 1-based field index for the two errors that name one, else 0 */
    char     message[TURBO_ERROR_MESSAGE_LEN];   /* NUL-terminated UTF-8 */
} turbo_error;
typedef struct turbo_device_info {
    uint32_t struct_size;
    uint32_t kind;               /* TURBO_DEVICE_* */
    uint32_t ordinal;            /* index within its backend */
    uint32_t unified_memory;     /* 1 if host and device share one memory */
    uint64_t memory_total;       /* bytes, 0 if unknown */
    uint64_t memory_free;        /* bytes at query time, 0 if unknown */
    char     arch[32];           /* the label benchmarks are filed under: rtx4080, b70, m2, ... */
    char     name[128];          /* what the driver calls it */
    char     vendor[64];
    char     backend[32];        /* cuda, openvino, metal, hailo, ggml */
    char     runtime_version[64];   /* the vendor runtime this build linked */
    char     driver_version[64];    /* empty where there is none */
} turbo_device_info;
/* One cell of the matrix: what (device, task) can do, and the proof. */
typedef struct turbo_capability {
    uint32_t struct_size;
    uint32_t status;              /* TURBO_CAP_* */
    uint32_t dtype;               /* compute dtype used, TURBO_DTYPE_* */
    uint32_t options_honored;     /* bit (i-1) set: field i of turbo_embed_options is honored */
    float    cosine_floor;        /* lowest cosine against the fp32 reference in the record, 0 if none */
    float    speed_ratio;         /* our p50 latency over the reference's, from the record, 0 if none */
    char     benchmark[96];       /* file name of the record that backs SUPPORTED, else empty */
    char     reason[160];         /* why it is not SUPPORTED, else empty */
} turbo_capability;
int32_t turbo_runtime_device_count(turbo_runtime *rt, uint32_t *out, turbo_error *err);
int32_t turbo_runtime_device_info(turbo_runtime *rt, uint32_t index, turbo_device_info *out, turbo_error *err);
int32_t turbo_runtime_capability(turbo_runtime *rt, uint32_t index, uint32_t task, turbo_capability *out, turbo_error *err);