bindings/java/src/main/java/ai/pipestream/turbo/ffi/TurboNative.java


    /**
     * {@snippet lang=c :
     * int32_t turbo_runtime_load_provider(turbo_runtime *rt, turbo_text path, turbo_error *err)
     * }
     */
    public static int turbo_runtime_load_provider(MemorySegment rt, MemorySegment path, MemorySegment err) {
        var mh$ = turbo_runtime_load_provider.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_runtime_load_provider", rt, path, err);
            }
            return (int)mh$.invokeExact(rt, path, err);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class turbo_runtime_device_count {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER
        );

        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_runtime_device_count");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t turbo_runtime_device_count(turbo_runtime *rt, uint32_t *out, turbo_error *err)
     * }
     */
    public static FunctionDescriptor turbo_runtime_device_count$descriptor() {
        return turbo_runtime_device_count.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t turbo_runtime_device_count(turbo_runtime *rt, uint32_t *out, turbo_error *err)
     * }
     */
    public static MethodHandle turbo_runtime_device_count$handle() {
        return turbo_runtime_device_count.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t turbo_runtime_device_count(turbo_runtime *rt, uint32_t *out, turbo_error *err)
     * }
     */
    public static MemorySegment turbo_runtime_device_count$address() {
        return turbo_runtime_device_count.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t turbo_runtime_device_count(turbo_runtime *rt, uint32_t *out, turbo_error *err)
     * }
     */
    public static int turbo_runtime_device_count(MemorySegment rt, MemorySegment out, MemorySegment err) {
        var mh$ = turbo_runtime_device_count.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_runtime_device_count", rt, out, err);
            }
            return (int)mh$.invokeExact(rt, out, err);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class turbo_runtime_device_info {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER
        );

        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_runtime_device_info");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t turbo_runtime_device_info(turbo_runtime *rt, uint32_t index, turbo_device_info *out, turbo_error *err)
     * }
     */
    public static FunctionDescriptor turbo_runtime_device_info$descriptor() {
        return turbo_runtime_device_info.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t turbo_runtime_device_info(turbo_runtime *rt, uint32_t index, turbo_device_info *out, turbo_error *err)
     * }
     */
    public static MethodHandle turbo_runtime_device_info$handle() {
        return turbo_runtime_device_info.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t turbo_runtime_device_info(turbo_runtime *rt, uint32_t index, turbo_device_info *out, turbo_error *err)
     * }
     */
    public static MemorySegment turbo_runtime_device_info$address() {
        return turbo_runtime_device_info.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t turbo_runtime_device_info(turbo_runtime *rt, uint32_t index, turbo_device_info *out, turbo_error *err)
     * }
     */
    public static int turbo_runtime_device_info(MemorySegment rt, int index, MemorySegment out, MemorySegment err) {
        var mh$ = turbo_runtime_device_info.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_runtime_device_info", rt, index, out, err);
            }
            return (int)mh$.invokeExact(rt, index, out, err);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class turbo_runtime_select_device {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER
        );

        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_runtime_select_device");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t turbo_runtime_select_device(turbo_runtime *rt, const turbo_device_selector *sel, uint32_t *out, turbo_error *err)
     * }
     */
    public static FunctionDescriptor turbo_runtime_select_device$descriptor() {
        return turbo_runtime_select_device.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t turbo_runtime_select_device(turbo_runtime *rt, const turbo_device_selector *sel, uint32_t *out, turbo_error *err)
     * }
     */
    public static MethodHandle turbo_runtime_select_device$handle() {
        return turbo_runtime_select_device.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t turbo_runtime_select_device(turbo_runtime *rt, const turbo_device_selector *sel, uint32_t *out, turbo_error *err)
     * }
     */
    public static MemorySegment turbo_runtime_select_device$address() {
        return turbo_runtime_select_device.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t turbo_runtime_select_device(turbo_runtime *rt, const turbo_device_selector *sel, uint32_t *out, turbo_error *err)
     * }
     */
    public static int turbo_runtime_select_device(MemorySegment rt, MemorySegment sel, MemorySegment out, MemorySegment err) {
        var mh$ = turbo_runtime_select_device.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_runtime_select_device", rt, sel, out, err);
            }
            return (int)mh$.invokeExact(rt, sel, out, err);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class turbo_runtime_capability {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_INT,
            TurboNative.C_INT,
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER
        );

        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_runtime_capability");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t turbo_runtime_capability(turbo_runtime *rt, uint32_t index, uint32_t task, uint32_t modality, turbo_capability *out, turbo_error *err)
     * }
     */
    public static FunctionDescriptor turbo_runtime_capability$descriptor() {
        return turbo_runtime_capability.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t turbo_runtime_capability(turbo_runtime *rt, uint32_t index, uint32_t task, uint32_t modality, turbo_capability *out, turbo_error *err)
     * }
     */
    public static MethodHandle turbo_runtime_capability$handle() {
        return turbo_runtime_capability.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t turbo_runtime_capability(turbo_runtime *rt, uint32_t index, uint32_t task, uint32_t modality, turbo_capability *out, turbo_error *err)
     * }
     */
    public static MemorySegment turbo_runtime_capability$address() {
        return turbo_runtime_capability.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t turbo_runtime_capability(turbo_runtime *rt, uint32_t index, uint32_t task, uint32_t modality, turbo_capability *out, turbo_error *err)
     * }
     */
    public static int turbo_runtime_capability(MemorySegment rt, int index, int task, int modality, MemorySegment out, MemorySegment err) {
        var mh$ = turbo_runtime_capability.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_runtime_capability", rt, index, task, modality, out, err);
            }
            return (int)mh$.invokeExact(rt, index, task, modality, out, err);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class turbo_can_run {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_INT,
            turbo_text.layout(),
            TurboNative.C_INT,
            TurboNative.C_INT,
            TurboNative.C_POINTER
        );

        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_can_run");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t turbo_can_run(turbo_runtime *rt, uint32_t index, turbo_text bundle_path, uint32_t task, uint32_t modality, turbo_error *err)
     * }
     */
    public static FunctionDescriptor turbo_can_run$descriptor() {
        return turbo_can_run.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t turbo_can_run(turbo_runtime *rt, uint32_t index, turbo_text bundle_path, uint32_t task, uint32_t modality, turbo_error *err)
     * }
     */
    public static MethodHandle turbo_can_run$handle() {
        return turbo_can_run.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t turbo_can_run(turbo_runtime *rt, uint32_t index, turbo_text bundle_path, uint32_t task, uint32_t modality, turbo_error *err)
     * }
     */
    public static MemorySegment turbo_can_run$address() {
        return turbo_can_run.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t turbo_can_run(turbo_runtime *rt, uint32_t index, turbo_text bundle_path, uint32_t task, uint32_t modality, turbo_error *err)
     * }
     */
    public static int turbo_can_run(MemorySegment rt, int index, MemorySegment bundle_path, int task, int modality, MemorySegment err) {
        var mh$ = turbo_can_run.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_can_run", rt, index, bundle_path, task, modality, err);
            }
            return (int)mh$.invokeExact(rt, index, bundle_path, task, modality, err);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }
